# XGBoost_header_detection_package

./: .gitignore  README.md  pyproject.toml  requirements.txt
excel_ai/: __init__.py  config.py  detector.py  detector_one_sheet.py  feature_engineering.py  model.py  upgrade_detection.py
excel_ai/models/: header_detector.pkl
excel_ai/services/: extraction_service.py  heuristic.py
