[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-ai-detector"
version = "0.1.0"
description = "AI-powered Excel column detection"
dependencies = [
    "pandas",
    "numpy",
    "openpyxl",
    "lightgbm",
    "scikit-learn",
    "joblib"
]

[tool.setuptools.package-data]
excel_ai = ["header_detector.pkl"]
